@@ -74,21 +74,6 @@
  */
 
 #include "test.h"
-/*
- * These before and after #defines are to avoid multiply defining
- * the functions in the included .c file, by declaring them as static
- * (local to this compilation unit).
- */
-#if defined(INLINE)
-#  define XINLINE INLINE
-#  undef INLINE
-#  define INLINE static XINLINE
-#endif
-#include "../ptw32_timespec.c"
-#if defined(XINLINE)
-#  define INLINE XINLINE
-#  undef XINLINE
-#endif
 
 #define MAX_COUNT 100
 
